--- a/index.html
+++ b/index.html
@@ -1,113 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>CSS Animation</title>
-    <style>
-        .container {
-            border: 0px solid green;
-            margin: 50px;
-			height: 80vh;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-        }
-		.bounce{
-			border: 0px solid red
-		
-		}
-		
-		.table{
-			width: 20vh;
-			border: 4px solid black;
-			position: absolute;
-			bottom: 11vh;
-			
-		}
-
-        .ball {
-            margin: 3vh;
-            width: 10vh;
-            height: 10vh;
-            background-color: red;
-			border-radius: 100px;
-			animation: bounce 4s infinite;
-        }
-
-        p {
-            font-size: 30px;
-            color: red;
-            animation: fall 3s infinite;
-        }
-		
-		@keyframes bounce { 
-			0%, 20%, 50%, 80%, 100%{ 
-				transform: translateY(70vh);
-				background-color: blue;
-				width: 10vh;
-				height: 10vh;
-			} 
-			40% { 
-				transform: translateY(35vh);
-				background-color: red;
-				width: 12vh;
-				height: 12vh;
-
-			} 
-			60% { 
-				transform: translateY(0vh);
-				background-color:green;
-				width: 11vh;
-				height: 11vh;
-			}
-		}
-		
-
-        @keyframes fall {
-            0% {
-                font-size: 20px;
-                color: blue;
-                font-weight: bold;
-                transform: translateY(0vh) rotate(0deg);
-            }
-
-            25% {
-                font-size: 30px;
-                color: blue;
-                font-weight: bold;
-                transform: translateY(30vh) rotate(10deg);
-            }
-
-            50% {
-                font-size: 40px;
-                color: blue;
-                font-weight: bold;
-                transform: translateY(60vh) rotate(0deg);
-            }
-
-            75% {
-                font-size: 50px;
-                color: green;
-                font-style: italic;
-                transform: translateY(80vh) rotate(-10deg);
-            }
-
-            100% {
-                font-size: 60px;
-                color: blue;
-                font-weight: bold;
-                transform: translateY(0vh) rotate(0deg);
-            }
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Links to Pages</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-		<div class = "bounce">
-			<div class="ball"></div>
-			<div class= "table"></div>
-		</div>
-		<div class="tri"> </div>
-        <div><p>VIT Chennai</p></div>
-    </div>
+    <h1>Welcome to My Website</h1>
+    <ul>
+        <li><a href="page1.html">Page 1</a></li>
+        <li><a href="page2.html">Page 2</a></li>
+        <li><a href="page3.html">Page 3</a></li>
+        <li><a href="page4.html">Page 4</a></li>
+        <!-- Add more links as needed -->
+    </ul>
 </body>
 </html>
