Update and rename lab6-11jan.html to page7.html

--- a/page7.html
+++ b/page7.html
@@ -2,7 +2,7 @@
 	<head>
 	
 		<title>CSS with HTMl</title>
-		<link rel = "stylesheet", href="lab6-11jan.css">
+		<link rel = "stylesheet", href="page7.css">
 		
 		<style>
 		
