--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links to Pages</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>Welcome to My Website</h1>
@@ -13,7 +13,17 @@
         <li><a href="page2.html">Page 2</a></li>
         <li><a href="page3.html">Page 3</a></li>
         <li><a href="page4.html">Page 4</a></li>
-        <!-- Add more links as needed -->
+        <li><a href="page5.html">Page 5</a></li>
+        <li><a href="page6.html">Page 6</a></li>
+        <li><a href="page7.html">Page 7</a></li>
+        <li><a href="page8.html">Page 8</a></li>
+        <li><a href="page9.html">Page 9</a></li>
+        <li><a href="page10.html">Page 10</a></li>
+        <li><a href="page11.html">Page 11</a></li>
+        <li><a href="page12.html">Page 12</a></li>
+        <li><a href="page13.html">Page 13</a></li>
+        <li><a href="page14.html">Page 14</a></li>
+        <li><a href="page15.html">Page 15</a></li>
     </ul>
 </body>
 </html>
