--- a/page7.html
+++ b/page7.html
@@ -2,7 +2,7 @@
 	<head>
 	
 		<title>CSS with HTMl</title>
-		<link rel = "stylesheet", href="page7.css">
+		<link rel = "stylesheet", href="lab6-11jan.css">
 		
 		<style>
 		
@@ -24,14 +24,19 @@
 	<div class = "container">
 		<div class = "main">
 		   <H2>The tomb of Kha and Merit</H2>
-		   <div class = "content">
-		   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/SQM_GE_289A_Boxcab_Carmelita_-_Reverso.jpg/640px-SQM_GE_289A_Boxcab_Carmelita_-_Reverso.jpg" alt ="image here" class= "image">
-		   <p id= "para">
-				The tomb of Kha and Merit is the funerary chapel and burial place of the ancient Egyptian foreman Kha and his wife Merit, in the northern cemetery of the workmen's village of Deir el-Medina. Kha supervised the workforce who constructed royal tombs during the reigns of the pharaohs Amenhotep II, Thutmose IV and Amenhotep III (r. 1425 – 1353 BC) in the mid–Eighteenth Dynasty of the early New Kingdom of Egypt. He died in his 60s, while Merit died before him in her 20s or 30s. The couple's pyramid-shaped chapel has been known since at least 1818. The tomb was cut into the base of the cliffs. This position allowed the entrance to be quickly buried by debris deposited by landslides and later tomb construction, hiding its location from ancient robbers. Almost all of the contents of the tomb were awarded to the excavators and were shipped to Italy soon after the discovery. They have been displayed in the Museo Egizio in Turin.
-		   
-		   </p>
-		   </div>
-		   	<p id = "caption"> Burial chamber of Kha and Merit as discovered in 1906 </p>
+		   <div class="content">
+            <div class="image-container">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/SQM_GE_289A_Boxcab_Carmelita_-_Reverso.jpg/640px-SQM_GE_289A_Boxcab_Carmelita_-_Reverso.jpg" 
+                   alt="Burial chamber of Kha and Merit as discovered in 1906" class="image">
+              <p id="caption">Burial chamber of Kha and Merit as discovered in 1906</p>
+            </div>
+            <p id="para">
+                The tomb of Kha and Merit, also known by its tomb number Theban Tomb 8 or TT8, is the funerary chapel and burial place of the ancient Egyptian foreman Kha and his wife Merit, in the northern cemetery of the workmen's village of Deir el-Medina. Kha supervised the workforce who constructed royal tombs during the reigns of the pharaohs Amenhotep II, Thutmose IV and Amenhotep III (r. 1425 – 1353 BC) in the mid-Eighteenth Dynasty of the early New Kingdom of Egypt. Of unknown background, he probably rose to his position through skill and was rewarded by at least one king. He and his wife Merit had three known children. Kha died in his 60s, while Merit died before him, seemingly unexpectedly, in her 20s or 30s.
+
+                The couple's pyramid-shaped chapel has been known since at least 1818 when one of their funerary stele was purchased by the antiquarian Bernardino Drovetti. Scenes from the chapel were first copied in the 19th century by early Egyptologists including John Gardiner Wilkinson and Karl Lepsius. The paintings show Kha and Merit receiving offerings from their children and appearing before Osiris, god of the dead. The decoration has been damaged over the millennia, deteriorating due to structural decay and human actions. The tomb was discovered in 1906 by the Italian Egyptologist Ernesto Schiaparelli, who excavated the site until 1908. The objects found in the tomb are considered some of the best preserved and most complete of any ancient Egyptian burial site. They are now in the Egyptian Museum in Turin, Italy.
+            
+            </p>                
+            </div>
 
 		
 		
@@ -39,12 +44,17 @@
 		
 		<aside>
 			<div class="upside">
-			<h2> Sidebar </h2>
-			<p>This is a sidebar.</p>
+			<h2> Sources </h2>
+			<ul><li><a href="https://en.wikipedia.org/wiki/Tomb_of_Kha_and_Merit"> Wikipedia</a></li>
+                <li><a href="https://historicaleve.com/tomb-of-kha-and-merit/"> Historical Eve</a></li>
+                <li><a href="https://egypt-museum.com/discovery-of-the-tomb-of-kha/"> Egypt Museum</a></li>
+                <li><a href="https://www.wikiwand.com/en/articles/Tomb_of_Kha_and_Merit"> Wikiwana</a></li>
+            </ul>
 			</div>
 			<div class="downside">
-			<h2> Sidebar </h2>
-			<p>This is a sidebar.</p>
+			<h2> Contact Us </h2>
+			<p><a href="mailto:anshikkumar.tiwari2023@vitstudent.ac.in"> anshikkumar.tiwari2023@vitstudent.ac.in </a>
+            </p>
 			</div>
 		
 		
